adderade navigation bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>Flia</h1>
     </header>
 
-
+    <nav class="navbar">
+        <a target="_blank" href= https://en.wikipedia.org/wiki/Flia >Origin & Historia</a>
+    </nav>
   
 
 
