--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         <a target="_blank" href= https://en.wikipedia.org/wiki/Flia >Origin & Historia</a>
     </nav>
   
+    <div class="container">
+        <div class="box" id="box1"> <h2>Instruktioner till att laga</h2>
+        </div>
+        <div class="box" id="box2">
+                </div>
+        <div class="box" id="box3">
+               <h3>Ingredienser</h3>
+                    </div>
+        <div class="box" id="box4">Vart du kan köpa dessa ingredienser.
+             </div>
+
 
 
         
