fixade box 1 & 2 och la in bild för maträtten

--- a/index.html
+++ b/index.html
@@ -18,15 +18,39 @@
     </nav>
   
     <div class="container">
-        <div class="box" id="box1"> <h2>Instruktioner till att laga</h2>
+        <div class="box" id="box1"> 
+            <h2>Instruktioner till att laga</h2>
+            <ul>
+                <li>
+                    Vispa ihop mjöl, ägg, salt och mjölk till en smet. Den ska ha samma konsistens som   pannkakssmet. Låt smeten vila i minst en timme – helst över natten.
+                </li>
+                <li>
+                    Rör ihop ingredienserna till fyllningen; smält smör, crème fraiche och kefir eller yoghurt.
+                </li>
+                <li>
+                    Värm ugnen till 250 grader på grillfunktion.
+                </li>
+                <li>
+                    Ta en rund bakplåt med en diameter på cirka 38 cm, smörj med lite matolja.
+                </li>
+                <li>
+                    Gör ett stjärnformat mönster genom att från mitten och utåt (eller utifrån och in om du tycker det blir lättare) spritsa eller hälla en matsked smet till en avlång trekantig remsa. Lämna lite plats mellan varje degremsa för fyllningen. I mellanrummen häller du lite av fyllningen, så att hela plåten är växelvis en remsa smet och en remsa fyllning.
+                    Sätt plåten i ugnen och grädda i cirka tio minuter tills den är gyllenbrun.
+                    Tag ut plåten och häll nu på smet där du tidigare hade fyllning och fyllning där det tidigare var smet. Fortsätt grädda och fylla på tills all smet och fyllning är slut, vilket säkert kan ta två timmar.
+                    Servera med de tillbehör du vill ha.
+                </li>
+                    
+            </ul>
         </div>
         <div class="box" id="box2">
+            <img src="./img/DS3mdTNWkAE98VI.webp" alt="Flia Bild">
                 </div>
         <div class="box" id="box3">
                <h3>Ingredienser</h3>
                     </div>
         <div class="box" id="box4">Vart du kan köpa dessa ingredienser.
-             </div>
+             
+        </div>
 
 
 
