fixat box 3 & 4 och adderade backgunds bild

--- a/index.html
+++ b/index.html
@@ -47,9 +47,33 @@
                 </div>
         <div class="box" id="box3">
                <h3>Ingredienser</h3>
-                    </div>
-        <div class="box" id="box4">Vart du kan köpa dessa ingredienser.
-             
+               <ul class="ingredienser">
+                <h4>Smeten: </h4>
+               <li>1,2 l mjöl</li>
+               <li>2 tsk salt</li>
+               <li>7 ¾  – 9 dl mjölk</li>
+               <li>Eventuellt 5 ägg – de flesta recepten är utan ägg, men ägg gör Flija ännu matigare och godare.</li>
+               <h5>Infylningen: </h5>
+               <li>2,5 dl crème fraiche</li>
+               <li>2,5 dl vanlig yoghurt eller kefir</li>
+               <li>115g smör, smält</li>
+               <li>1 tsk salt</li>
+               <li>lite mjölk</li>
+               <h6>Tillbehör: </h6>
+               <li>Honung eller sylt, till servering
+                 – eller
+                 tomat, yoghurt eller inlagda grönsaker.</li>
+           </ul>
+        </div>
+        <div class="box" id="box4">
+        <h7> Vart du kan köpa dessa ingedienser :</h7>
+        <ul class="länkar">
+            <li><a target="_blank"  href="https://www.coop.se/handla/aktuella-erbjudanden/"> Coop.se</a> </li>
+
+            </li><a target="_blank"  href="https://www.hemkop.se/handla">Hemköp.se</a> </li>
+            
+            </li><a target="_blank"  href="https://www.lidl.se/c/vara-varor/s10017042">Lidl.se</a> </li>
+            </ul> 
         </div>
 
 
