adderade footer och en liten bild på det viktigaste ingredienserna och jag är klar

--- a/index.html
+++ b/index.html
@@ -74,8 +74,13 @@
             
             </li><a target="_blank"  href="https://www.lidl.se/c/vara-varor/s10017042">Lidl.se</a> </li>
             </ul> 
+            <img src="img/YTo2OntzOjI6ImlkIjtpOjExNTU0Mjg7czoxOiJ3IjtpOjIzMDtzOjE6ImgiO2k6MzIwMDtzOjE6ImMiO2k6MDtzOjE6InMiO2k6MDtzOjE6ImsiO3M6NDA6ImUyYjc0NWUyMzY4NGU1NDUyYzcxZGQxNjAzMzI3MDBkYzFkYWUxMDUiO30.webp" alt="Ingredienser">
         </div>
-
+    </div>
+    <footer class="footer">
+        <p>Tel.nr: +46 78118921 Mejl: hejardetbra@yahoo.com
+        </p>
+    </footer>
 
 
         
